--- a/DLHLT_2020_Group2_HK.ipynb
+++ b/DLHLT_2020_Group2_HK.ipynb
@@ -91,33 +91,33 @@
           "base_uri": "https://localhost:8080/",
           "height": 353
         },
-        "outputId": "5d0bd899-a48b-4f26-b7ba-be1e5487acb7"
+        "outputId": "7d461a59-46ab-4b35-a0d8-91a36a3739f8"
       },
       "source": [
         "!pip install transformers"
       ],
-      "execution_count": 1,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: transformers in /usr/local/lib/python3.6/dist-packages (2.9.0)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.6/dist-packages (from transformers) (4.41.1)\n",
-            "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers) (0.7)\n",
             "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.6/dist-packages (from transformers) (0.1.86)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.6/dist-packages (from transformers) (4.41.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers) (3.0.12)\n",
+            "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers) (0.7)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from transformers) (1.18.4)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers) (2.23.0)\n",
+            "Requirement already satisfied: sacremoses in /usr/local/lib/python3.6/dist-packages (from transformers) (0.0.43)\n",
             "Requirement already satisfied: tokenizers==0.7.0 in /usr/local/lib/python3.6/dist-packages (from transformers) (0.7.0)\n",
             "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers) (2019.12.20)\n",
-            "Requirement already satisfied: sacremoses in /usr/local/lib/python3.6/dist-packages (from transformers) (0.0.43)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from transformers) (1.18.4)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers) (3.0.12)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (3.0.4)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (1.24.3)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2.9)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (1.24.3)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2020.4.5.1)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (7.1.2)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (1.12.0)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (0.14.1)\n"
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (0.14.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (7.1.2)\n"
           ],
           "name": "stdout"
         }
@@ -153,11 +153,7 @@
       "metadata": {
         "id": "TYmczbT-WhYj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 74
-        },
-        "outputId": "8d40d91e-2a8d-40bb-ff46-d3794ac785c1"
+        "colab": {}
       },
       "source": [
         "import io\n",
@@ -198,17 +194,8 @@
         "%matplotlib inline\n",
         "pp = pprint.PrettyPrinter(indent=4)"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1656,7 +1643,7 @@
       "source": [
         "### 2.1: BERT\n",
         "\n",
-        "We had initially some trouble in getting BERT working properly, and therefore decided to use two alternative approaches: Keras and PyTorch. Some massive problems remained (highly likely relationg to the order in which libraries are imported) and we settled for stylewise suboptimal decision to download keras-BERT and retating functions as close to deployment as possile.\n"
+        "We had initially some trouble in getting BERT working properly, and therefore decided to use two alternative approaches: Keras and PyTorch. Some massive problems remained (highly likely relating to the order in which libraries are imported) and we settled for stylewise suboptimal decision to download keras-BERT and relating functions as close to deployment as possible.\n"
       ]
     },
     {
@@ -2175,7 +2162,7 @@
       "metadata": {
         "id": "JH7s4Yh0iqRz",
         "colab_type": "code",
-        "outputId": "e9044639-f832-4f04-a336-0916c5782d45",
+        "outputId": "b4135de5-d09e-4944-b3d8-994c719c2e58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
@@ -2197,12 +2184,12 @@
         "\n",
         "print(model.output)"
       ],
-      "execution_count": 26,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Tensor(\"dense/Identity:0\", shape=(None, 61), dtype=float32)\n"
+            "Tensor(\"dense_1/Identity:0\", shape=(None, 61), dtype=float32)\n"
           ],
           "name": "stdout"
         }
@@ -2302,23 +2289,38 @@
       "metadata": {
         "id": "2iYFdvfZlWgU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "outputId": "533d7274-a60a-4bcd-b78c-70137d040f53"
       },
       "source": [
         "stop_cb = EarlyStopping(monitor = 'val_sparse_categorical_accuracy', patience=4, verbose=1, mode='auto', baseline=None, restore_best_weights=True)\n",
-        "#mc_cb = ModelCheckpoint(filepath='models/BERT_multiclass.h5', monitor='val_sparse_categorical_accuracy', verbose=0,save_best_only=True, mode='auto')\n",
+        "mc_cb = ModelCheckpoint(filepath='models/BERT_multiclass.h5', monitor='val_sparse_categorical_accuracy', verbose=0,save_best_only=True, mode='auto')\n",
         "\n",
         "history = model.fit(\n",
         "    X,\n",
         "    Y,\n",
         "    epochs=EPOCHS,\n",
         "    batch_size=BATCH_SIZE,\n",
-        "    validation_data=(x, y), \n",
-        "    callbacks=[stop_cb]\n",
+        "    validation_data=(x, y),\n",
+        "    callbacks=[stop_cb, mc_cb]\n",
         ")"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/12\n",
+            "94/94 [==============================] - 108s 1s/step - loss: 3.0868 - sparse_categorical_accuracy: 0.2680 - val_loss: 2.0285 - val_sparse_categorical_accuracy: 0.4990\n",
+            "Epoch 2/12\n",
+            "56/94 [================>.............] - ETA: 36s - loss: 1.6924 - sparse_categorical_accuracy: 0.5826"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
